TestSuite/errors/err0230.pas
type
  r1=record
    
    a :=default(r1);
    
  end;

begin end.